# eyaara

./: CHANGELOG.md  LICENSE  eyaara.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.2/: eyaara-0.1.0.0-inplace.conf  package.cache
src/: Instrumentation.hs  Journey.hs
test/: InstrumentationTest.hs  Main.hs
