cabal-version:      3.4
name:               eyaara
version:            0.1.0.0
license:            BSD-2-Clause
license-file:       LICENSE
author:             Vitor Roque
maintainer:         vitor.roquep@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Journey, Instrumentation
    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable eyaara
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.0.0,
        eyaara
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite eyaara-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    InstrumentationTest
    build-depends:
        base ^>=4.18.0.0,
        eyaara,
        HUnit
